--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,6 @@ name = "bin_diff_tool"
 version = "0.1.0"
 edition = "2024"
 
-[[bin]]
-name = "dft"
-path = "src/main.rs"
-
 [dependencies]
 clap = { version = "4", features = ["derive"] }
 anyhow = "1"
@@ -19,3 +15,12 @@ toml = "0.8"
 serde = { version = "1", features = ["derive"] }
 chrono = "0.4"
 similar = "2"
+
+
+[[bin]]
+name = "dft"
+path = "src/bin/cli/main.rs"
+
+[[bin]]
+name = "mc_updater"
+path = "src/bin/plugins/mc_updater/main.rs"
